Add Bottom Navigation with Fragment Navigation & Navigation Graph, Add Bottom Navigation Icon, Add Navigation Fragment & Navigation UI Library

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MakanMoerahAndroid</string>
+    <string name="home_bottom_menu_label">Home</string>
+    <string name="explore_bottom_menu_label">Explore</string>
+    <string name="booking_bottom_menu_label">Booking</string>
+    <string name="reservation_bottom_menu_label">Reservation</string>
+    <string name="account_bottom_menu_label">Account</string>
 </resources>
