--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="restaurant_card_image_content_description">Restaurant Image</string>
 
     <!-- Explore Fragment -->
+    <string name="explore_fragment_restaurant_list_no_restaurant_found_header_text">No Restaurant Found</string>
     <string name="explore_fragment_bottom_sheet_filter_options_menu_title">Filter</string>
     <string name="explore_fragment_bottom_sheet_filter_sort_header_text">Sort</string>
     <string name="explore_fragment_bottom_sheet_filter_sort_button_cheapest_text">Cheapest</string>
@@ -23,11 +24,14 @@
     <string name="explore_fragment_bottom_sheet_filter_date_header_text">Date</string>
     <string name="explore_fragment_bottom_sheet_filter_city_header_text">City</string>
     <string name="explore_fragment_bottom_sheet_filter_district_header_text">District</string>
+    <string name="explore_fragment_bottom_sheet_filter_district_no_district_filter_available_header_text">No District Available</string>
     <string name="explore_fragment_bottom_sheet_filter_food_category_header_text">Food Category</string>
+    <string name="explore_fragment_bottom_sheet_filter_food_category_no_food_category_filter_available_header_text">No Food Category Available</string>
     <string name="explore_fragment_bottom_sheet_filter_price_header_text">Price</string>
     <string name="explore_fragment_bottom_sheet_filter_price_slider_content_description">Price Slider</string>
     <string name="explore_fragment_bottom_sheet_filter_discount_header_text">Discount</string>
     <string name="explore_fragment_bottom_sheet_filter_discount_slider_content_description">Discount Slider</string>
     <string name="explore_fragment_bottom_sheet_filter_rating_header_text">Rating</string>
     <string name="explore_fragment_bottom_sheet_filter_rating_slider_content_description">Rating Slider</string>
+    <string name="explore_fragment_bottom_sheet_filter_apply_filter_button_text">Apply Filter</string>
 </resources>
