--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,13 @@
     <string name="booking_fragment_booking_list_no_booking_available_header_text">No Booking(s) Yet</string>
     <string name="booking_fragment_booking_list_restaurant_card_image_content_description">Restaurant Image</string>
 
+    <!-- Reservation Fragment -->
+    <string name="reservation_fragment_booking_category_ongoing_toggle_button_text">Ongoing</string>
+    <string name="reservation_fragment_booking_category_cancelled_toggle_button_text">Cancelled</string>
+    <string name="reservation_fragment_booking_category_completed_toggle_button_text">Completed</string>
+    <string name="reservation_fragment_date_picker_header_text">Date</string>
+    <string name="reservation_fragment_reservation_list_no_reservation_available_header_text">No Reservation(s) Yet</string>
+
     <!-- Account Fragment -->
     <string name="account_fragment_logout_failure_general_exception_error_message">Logout Fails, Please try again</string>
     <string name="account_fragment_relogin_failure_general_exception_error_message">Relogin Fails, Please check your internet connection</string>
