Add OAuth2 Login Button For Facebook & Google (Redirect to Backend OAuth2 Authorization URL) to Account Fragment(Login Portion), Add Intent Filter with path /redirectToAndroid to mainActivity whose purpose is to facilitate redirection upon OAuth2Login, Parse Cookie passed to MainActivity as Query Parameters in IntentData URI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="login_fragment_password_input_text_hint">Password</string>
     <string name="login_fragment_empty_password_error_message">Required</string>
     <string name="login_fragment_login_button_text">Login</string>
+    <string name="login_fragment_facebook_login_button_text">Login with Facebook</string>
+    <string name="login_fragment_google_login_button_text">Login with Google</string>
     <string name="login_fragment_login_failure_invalid_credentials_error_message">Invalid Credentials</string>
     <string name="login_fragment_login_failure_failed_recaptcha_error_message">Invalid Recaptcha, Please try login again</string>
     <string name="login_fragment_login_failure_empty_recaptcha_response_error_message">Empty Recaptcha Response, Please try login again</string>
